<resources>
    <string name="app_name">TODO-Week</string>
    <string name="tasks7days_title">Week tasks</string>
    <string name="welcome_msg">Welcome to</string>
    <string name="uname">Username</string>
    <string name="pass">Password (optional)</string>
    <string name="register">Create account</string>
    <string name="recover">Recover password</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="save_pass">Save password</string>
    <string name="login">Login</string>
    <string name="error_registration">Incorrect registration data. Please check the username and password.</string>
    <string name="username_exists">Username already exists. Please try another username.</string>
    <string name="reg_complete">Registration complete successfully.</string>
    <string name="error_login">Incorrect login data. Please check the username and password.</string>
    <string name="week_tasks"> | Tasks 7 days</string>
    <string name="todo_addtodo"> | Add ToDo</string>
    <string name="todo_save">Save</string>
    <string name="todo_cancel">Cancel</string>
    <string name="todo_category">Category</string>
    <string name="todo_title">Title</string>
    <string name="todo_select_time">Select time</string>
    <string name="todo_select_date">Select date</string>
    <string name="todo_select_priority">Select priority: [0-100]</string>
    <string name="todo_select_category">Select category</string>
    <string name="todo_error_save">Incorrect data. Check all fields before save.</string>
    <string name="todo_select_message">Enter your ToDo message.</string>
    <string name="todo_business_message">//TODO...</string>
    <string name="todo_manage_categories">Categories</string>
    <string name="todo_categories_title">| Categories</string>
    <string name="todo_category_title">| Category</string>
    <string name="todo_category_name">Category name</string>
    <string name="todo_category_save">Add category</string>
    <string name="todo_category_added">Category added successfully.</string>
    <string name="delete">Delete</string>
    <string name="todo_category_deleted">Category deleted successfully.</string>
    <string name="todo_delete_confirm">Are you sure you want to delete this item?</string>
    <string name="todo_back_to_todo">Back</string>
    <string name="todo_save_complete">Your ToDo saved successfully!</string>
    <string name="todo_weekday_count">ToDo count: </string>
    <string name="todo_weekday_last_todo">Last Todo: </string>
    <string name="todo_weekday_show_all">Show all</string>
    <string name="todo_edit_todo">Edit ToDo</string>
    <string name="todo_item_deleted">ToDo item deleted successfully.</string>
    <string name="todo_day_tasks">Day ToDo`s</string>
</resources>