<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/weeklist_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddTodoFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topBar"
                style="@style/Widget.MaterialComponents.Toolbar.Primary"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:navigationIcon="@drawable/ic_menu"
                app:title="@string/todo_addtodo" />

        </com.google.android.material.appbar.AppBarLayout>

        <!-- Note: A RecyclerView can also be used -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Scrollable content -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/todo_select_category"
                    android:textSize="16dp"
                    app:errorEnabled="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/categoryLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="210dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="15dp"
                        android:hint="@string/todo_category">

                        <AutoCompleteTextView
                            android:id="@+id/category_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <!--                    Manage categories button-->
                    <Button
                        android:id="@+id/btn_manageCategories"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="160dp"
                        android:layout_height="70dp"
                        android:layout_gravity="center_vertical"
                        android:text="@string/todo_manage_categories"
                        app:icon="@drawable/ic_categories" />

                </LinearLayout>
                <!--                Date time buttons-->
                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/todo_select_date"
                    android:textSize="16dp"
                    app:errorEnabled="true" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:orientation="horizontal"
                    android:padding="5dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_time"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/todo_select_time"
                        app:icon="@drawable/ic_time" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_date"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/todo_select_date"
                        app:icon="@drawable/ic_date_select" />
                </LinearLayout>

                <!--                Priority-->
                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/todo_select_priority"
                    android:textSize="16dp"
                    app:errorEnabled="true" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sliderPriority"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:value="0.0"
                    android:valueFrom="0.0"
                    android:valueTo="100.0" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:hint="@string/todo_select_message"
                    android:textSize="16dp"
                    app:errorEnabled="true" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="4dp"
                    android:hint="@string/todo_business_message">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_msg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_save_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="16dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="save"
            app:icon="@drawable/ic_save" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_margin="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="cancel"
            app:icon="@drawable/ic_cancel" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>